chore: update tmux.conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,8 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 # Enable mouse
 set -g mouse on
 
+set -g status-position top
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
