--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Set true color
-set-option -sa terminal-overrides ",xterm*:Tc"
-#set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",xterm*:RGB"
+set -g default-terminal "tmux-256color"
 #set -g default-terminal "xterm-256color"
 #set -ga terminal-overrides ",*256col*:Tc"
 #set -ga terminal-overrides ",xterm-256color:Tc"
