--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,7 @@ set -g default-terminal "tmux-256color"
 set -g mouse on
 
 set -g status-position top
+set -g set-clipboard on
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
