chore(tmux): update tmux.conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,19 @@ set -g default-terminal "tmux-256color"
 set -g mouse on
 
 set -g status-position top
+
+# Clipboard
 set -g set-clipboard on
+set -s copy-command 'wl-copy'
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi V send-keys -X rectangle-toggle
+# unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
+
+# bind-key -T copy-mode-vi v send-keys -X begin-selection
+# bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+# bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -30,14 +42,12 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
-set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Set vi-mode
 set-window-option -g mode-keys vi
+
 # Keybindings
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Open panes in current directory
 bind '"' split-window -v -c "#{pane_current_path}"
