--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,7 @@ set -g default-terminal "tmux-256color"
 # Enable mouse
 set -g mouse on
 
-set -g status-position top
+set -g status-position bottom
 
 # Clipboard
 set -g set-clipboard on
@@ -41,7 +41,7 @@ bind -n M-L next-window
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'o0th/tmux-nova'
 # set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Set vi-mode
@@ -53,26 +53,18 @@ set-window-option -g mode-keys vi
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-#set -g @catppuccin_left_separator "█"
-#set -g @catppuccin_right_separator "█"
-#set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
-set -g @catppuccin_window_tabs_enabled on
-
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator "  █"
-
-set -g @catppuccin_window_default_fill "number"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#{pane_current_path}"
-
-set -g @catppuccin_status_modules_right "application session"
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "yes"
-set -g @catppuccin_status_fill "all"
-set -g @catppuccin_status_connect_separator "no"
-
+# Theme config
+set -g @nova-nerdfonts true
+set -g @nova-pane-active-border-style '#44475a'
+set -g @nova-pane-border-style '#282a36'
+set -g @nova-status-style-bg '#4c566a'
+set -g @nova-status-style-fg '#d8dee9'
+set -g @nova-status-style-active-bg '#89c0d0'
+set -g @nova-status-style-active-fg '#2e3540'
+set -g @nova-status-style-double-bg '#2d3540'
+set -g @nova-pane '#I#{?pane_in_mode, #{pane_mode},} #W'
+set -g @nova-segment-mode '#{?client_prefix,C,I}'
+set -g @nova-segement-mode-colors "#78a2c1 #2e3440"
+set -g @nova-rows 0
+set -g @nova-segments-0-left 'mode'
 run '~/.tmux/plugins/tpm/tpm'
