feat(tmux): update color theme config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,6 +55,8 @@ bind % split-window -h -c "#{pane_current_path}"
 
 # Theme config
 set -g @nova-nerdfonts true
+set -g @nova-nerdfonts-left ''
+set -g @nova-nerdfonts-right ''
 set -g @nova-pane-active-border-style '#44475a'
 set -g @nova-pane-border-style '#282a36'
 set -g @nova-status-style-bg '#4c566a'
@@ -67,4 +69,5 @@ set -g @nova-segment-mode '#{?client_prefix,C,I}'
 set -g @nova-segement-mode-colors "#78a2c1 #2e3440"
 set -g @nova-rows 0
 set -g @nova-segments-0-left 'mode'
+
 run '~/.tmux/plugins/tpm/tpm'
