--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,8 @@ set -g status-position bottom
 # Clipboard
 set -g set-clipboard on
 set -s copy-command 'wl-copy'
+
+bind Escape copy-mode
 bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi V send-keys -X rectangle-toggle
@@ -22,6 +24,8 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
 # bind-key -T copy-mode-vi v send-keys -X begin-selection
 # bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+set -g detach-on-destroy off
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -39,19 +43,25 @@ bind -n M-H previous-window
 bind -n M-L next-window
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'o0th/tmux-nova'
 # set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Set vi-mode
-set-window-option -g mode-keys vi
+setw -g mode-keys vi
 
 # Keybindings
 
 # Open panes in current directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'bash'
 
 # Theme config
 set -g @nova-nerdfonts true
