--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -76,8 +76,11 @@ set -g @nova-status-style-active-fg '#2e3540'
 set -g @nova-status-style-double-bg '#2d3540'
 set -g @nova-pane '#I#{?pane_in_mode, #{pane_mode},} #W'
 set -g @nova-segment-mode '#{?client_prefix,C,I}'
-set -g @nova-segement-mode-colors "#78a2c1 #2e3440"
+set -g @nova-segment-mode-colors "#78a2c1 #2e3440"
+set -g @nova-segment-session '#S'
+set -g @nova-segment-session-colors "#ff9e64 #2e3440"
 set -g @nova-rows 0
 set -g @nova-segments-0-left 'mode'
+set -g @nova-segments-0-right 'session'
 
 run '~/.tmux/plugins/tpm/tpm'
