--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,14 +1,11 @@
 # Set true color
-set-option -ga terminal-overrides ",xterm*:RGB"
-set -g default-terminal "tmux-256color"
-#set -g default-terminal "xterm-256color"
-#set -ga terminal-overrides ",*256col*:Tc"
-#set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
 
 # Enable mouse
 set -g mouse on
 
 set -g status-position bottom
+set -gq allow-passthrough on
 
 # Clipboard
 set -g set-clipboard on
