--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,4 +1,8 @@
+"$schema" = "https://starship.rs/config-schema.json"
+
 palette = "nord"
+
+right_format = """$git_branch$git_commit$git_state$git_metrics$git_status"""
 
 [directory]
 style = "white"
@@ -7,17 +11,18 @@ repo_root_style = "dark_blue"
 
 [git_branch]
 style = "gray"
-format = "[on](white) [$branch ]($style)"
+format = "[on](white) [$symbol$branch ]($style)"
 
 [git_status]
 style = "fg:red"
 untracked = "[~$count](bold green)"
 staged = "[$count](bold green)"
-stashed = "[$count](teal)"
+stashed = "[$$count](teal)"
 deleted = "[$count](bold red)"
-modified = "[$count](bold yellow)"
+modified = "[!$count](bold yellow)"
 ahead = "[$count](bold purple)"
 behind = "[$count](bold purple)"
+diverged = "[$ahead_count$behind_count](bold purple)"
 format = "([$all_status$ahead_behind]($style) )"
 
 [shell]
