--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -23,6 +23,21 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
 # bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+bind-key "T" run-shell "sesh connect \"$(
+  sesh list --icons | fzf-tmux -p 80%,70% \
+    --no-sort --ansi --prompt 'A ' \
+    --header ' ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(A )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(T )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(G )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(X )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(F )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(D )+reload(sesh list --icons)' \
+    --preview-window 'right:55%' \
+    --preview 'sesh preview {}'
+)\""
+
 set -g detach-on-destroy off
 
 # Start windows and panes at 1, not 0
@@ -57,6 +72,9 @@ setw -g mode-keys vi
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+set -g @resurrect-save 'C-s'
+set -g @resurrect-restore 'C-r'
+set -g @resurrect-strategy-nvim 'session'
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'bash'
