--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -23,7 +23,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
 # bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-bind-key "T" run-shell "sesh connect \"$(
+bind-key C-t run-shell "sesh connect \"$(
   sesh list --icons | fzf-tmux -p 80%,70% \
     --no-sort --ansi --prompt 'A ' \
     --header ' ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
@@ -37,6 +37,16 @@ bind-key "T" run-shell "sesh connect \"$(
     --preview-window 'right:55%' \
     --preview 'sesh preview {}'
 )\""
+bind-key C-g display-popup \
+  -d "#{pane_current_path}" \
+  -w 80% \
+  -h 80% \
+  -E "lazygit"
+bind-key C-f display-popup \
+  -d "#{pane_current_path}" \
+  -w 90% \
+  -h 90% \
+  -E "mc"
 
 set -g detach-on-destroy off
 
