feat(tmux): use ranger file manager in key binding

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -46,7 +46,7 @@ bind-key C-f display-popup \
   -d "#{pane_current_path}" \
   -w 90% \
   -h 90% \
-  -E "mc"
+  -E "ranger"
 
 set -g detach-on-destroy off
 
