--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -61,6 +61,12 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+# Split panes
+bind | split-window -v -c "#{pane_current_path}"
+bind - split-window -h -c "#{pane_current_path}"
+unbind '"'
+unbind %
+
 # Shift Alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
@@ -75,12 +81,6 @@ set -g @plugin 'o0th/tmux-nova'
 
 # Set vi-mode
 setw -g mode-keys vi
-
-# Keybindings
-
-# Open panes in current directory
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
 
 set -g @resurrect-save 'C-s'
 set -g @resurrect-restore 'C-r'
