--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -23,6 +23,8 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
 # bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+bind-key C-o popup -E -d "#{pane_current_path}" -w 90% -h 90% "opencode"
+
 bind-key C-t run-shell "sesh connect \"$(
   sesh list --icons | fzf-tmux -p 80%,70% \
     --no-sort --ansi --prompt 'A ' \
