--- a/tmux/dot-config/tmux/tmux.conf
+++ b/tmux/dot-config/tmux/tmux.conf
@@ -60,12 +60,12 @@ set-option -g renumber-windows on
 
 # Set prefix
 unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+set -g prefix C-a
+bind C-a send-prefix
 
 # Split panes
-bind | split-window -v -c "#{pane_current_path}"
-bind - split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
