feat(tmux): add key binding

--- a/tmux/dot-config/tmux/tmux.conf
+++ b/tmux/dot-config/tmux/tmux.conf
@@ -39,11 +39,13 @@ bind-key C-t run-shell "sesh connect \"$(
     --preview-window 'right:55%' \
     --preview 'sesh preview {}'
 )\""
+
 bind-key C-g display-popup \
   -d "#{pane_current_path}" \
   -w 80% \
   -h 80% \
   -E "lazygit"
+
 bind-key C-f display-popup \
   -d "#{pane_current_path}" \
   -w 90% \
@@ -51,6 +53,8 @@ bind-key C-f display-popup \
   -E "ranger"
 
 set -g detach-on-destroy off
+
+bind-key x kill-pane
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
